2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JLabel/setDisplayedMnemonic.java:
	(displayedMnemonicWhenEventFired): New field,
	(propertyChange): Record mnemonic value at time of event,
	(testMethod1): Check mnemonic at event time,
	(testMethod2): Added new checks,
	* gnu/testlet/javax/swing/JLabel/setDisplayedMnemonicIndex.java:
	(propertyChange): Only record index for a specific event,
	(test): Added new checks.

2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JLabel/setDisplayedMnemonic.java: 
	New test,
	* gnu/testlet/javax/swing/JLabel/setDisplayedMnemonicIndex.java: 
	New test.
	
2006-06-21  neugens  <neugens@limasoftware.net>

        * gnu/testlet/java/util/prefs/PreferenceTest.java (testBoolean): new
        test method.
        (test): call to enable new test.

2006-06-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* README: Added info about new -vmarg option for the Harness.
	* Harness.java: 
	(vmArgs): New field.
	(main): Handle new -vmarg option.
	(initProcess): Concatenate the vmArgs to the vmCommand before running
	exec.

2006-06-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/SimpleTestHarness.java: Removed this file.

2006-06-21  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/lang/reflect/AccessibleObject/security.java: New test.

2006-06-21  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/awt/Graphics2D/security.java: New test.

2006-06-20  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/URLStreamHandler/Except.java: New file.

2006-06-20  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JMenu/remove.java: New test.

2006-06-20  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JMenu/getPopUpMenu.java: New test.

2006-06-20  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JMenu/constructors.java: New test.

2006-06-20  Gary Benson  <gbenson@redhat.com>
